--- a/css/ripples.css
+++ b/css/ripples.css
@@ -75,27 +75,19 @@
     opacity: 0;
 }
 
-.ripple {
+.ripple,
+.has-black-ripple .ripple,
+.button:not(.raised) .ripple {
     background-color: #000;
 }
 
-.ripple-effect.has-white-ripple .ripple,
-.ripple-effect.primary .ripple,
-.ripple-effect.blue .ripple,
-.ripple-effect.brown .ripple,
-.ripple-effect.blue-gray .ripple,
-.ripple-effect.blue-grey .ripple,
-.ripple-effect.green .ripple,
-.ripple-effect.indigo .ripple,
-.ripple-effect.deep-orange .ripple,
-.ripple-effect.pink .ripple,
-.ripple-effect.purple .ripple,
-.ripple-effect.deep-purple .ripple,
-.ripple-effect.red .ripple,
-.ripple-effect.teal .ripple,
-.ripple-effect.dark-gray .ripple,
-.ripple-effect.dark-grey .ripple {
+.has-white-ripple .ripple{
     background-color: #fff;
+}
+
+.ripple {
+    color: inherit;
+    background-color: currentColor;
 }
 
 [disabled] .ripple,
