--- a/css/transitions.css
+++ b/css/transitions.css
@@ -8,61 +8,41 @@
             transition: all .27s ease-out;
 }
 
-.transition.is-idle {
+.transition.is-stopped {
     -webkit-transition: all .27s ease-in;
          -o-transition: all .27s ease-in;
             transition: all .27s ease-in;
 }
 
-.transition.slide-left.is-idle {
+.transition.slide-left.is-stopped {
     -webkit-transform: translateX(-100%);
         -ms-transform: translateX(-100%);
             transform: translateX(-100%);
 }
 
-.transition.slide-right.is-idle {
+.transition.slide-right.is-stopped {
     -webkit-transform: translateX(100%);
         -ms-transform: translateX(100%);
             transform: translateX(100%);
 }
 
-.transition.slide-top.is-idle {
+.transition.slide-top.is-stopped {
     -webkit-transform: translateY(-100%);
         -ms-transform: translateY(-100%);
             transform: translateY(-100%);
 }
 
-.transition.slide-bottom.is-idle {
+.transition.slide-bottom.is-stopped {
     -webkit-transform: translateY(100%);
         -ms-transform: translateY(100%);
             transform: translateY(100%);
 }
 
-.transition.opacity.is-idle {
+.transition.opacity.is-stopped {
     opacity: 0;
 }
 
-.transition.shadow.is-idle {
+.transition.shadow.is-stopped {
     -webkit-box-shadow: none;
             box-shadow: none;
-}
-
-.transition.radial-transform {
-    position: absolute;
-    top: 50%; 
-    left: 50%; 
-    -webkit-transform: translate(-50%, -50%); 
-        -ms-transform: translate(-50%, -50%); 
-            transform: translate(-50%, -50%); 
-    border-radius: 50%;
-}
-
-.radial-transform-container {
-    overflow: hidden;
-    position: relative;
-}
-
-.transition.radial-transform.transition.is-idle {
-    width: 0!important;
-    height: 0!important;        
 }
